--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
 	"description": "test",
 	"main": "index.js",
 	"scripts": {
-		"start": "nodemon -L app.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start": "nodemon build/app.js -w build/",
+		"compile": "tsc -w --outDir build/ ./src/app.ts"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"chalk": "^2.3.0",
 		"express": "^4.16.2",
-		"mongodb": "^2.2.33",
-		"nodemon": "^1.12.1"
+		"keypair": "^1.0.1",
+		"mongodb": "^2.2.33"
+	},
+	"devDependencies": {
+		"@types/express": "^4.0.39",
+		"@types/node": "^8.0.53",
+		"nodemon": "^1.12.1",
+		"typescript": "^2.6.1"
 	}
 }
