--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
          - 3001:3000
       volumes:
          - .:/app            # share your code with the containers
-         - build:/app/build
+         - dist:/app/dist
       working_dir: /app
       links:
          - mongodb
@@ -24,7 +24,7 @@ services:
          - 3002:3000
       volumes:
          - .:/app            # share your code with the containers
-         - build:/app/build
+         - dist:/app/dist
       working_dir: /app
       links:
          - mongodb
@@ -40,7 +40,7 @@ services:
          - 3003:3000
       volumes:
          - .:/app            # share your code with the containers
-         - build:/app/build
+         - dist:/app/dist
       working_dir: /app
       links:
          - mongodb
@@ -56,7 +56,7 @@ services:
       volumes:
          - .:/app            # share your code with the containers
          - node_modules:/app/node_modules
-         - build:/app/build
+         - dist:/app/dist
       # typescript should watch the src directory
       command: npm i -g typescript && npm i && npm run compile
 
@@ -81,4 +81,4 @@ services:
 
    volumes:
       node_modules:
-      build:
+      dist:
