--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,8 @@ services:
          - node_modules:/app/node_modules
          - dist:/app/dist
       # typescript should watch the src directory
-      command: npm i -g typescript && npm i && npm run compile
+      entrypoint: sh
+      command: -c "npm i -g typescript; npm i; npm run compile"
 
    mongodb:
       image: mongo
@@ -79,6 +80,6 @@ services:
          - ME_CONFIG_MONGODB_SERVER=mongodb
          - ME_CONFIG_OPTIONS_EDITORTHEME=ambiance
 
-   volumes:
-      node_modules:
-      dist:
+volumes:
+   node_modules:
+   dist:
