--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "nodemon dist/index.js -w dist/",
-		"compile": "tsc -w --outDir dist/ ./src/index.ts"
+		"compile": "tsc -w"
 	},
 	"author": "",
 	"license": "ISC",
