--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,23 @@ services:
       entrypoint: sh
       command: -c "npm i -g typescript; npm i; npm run compile"
 
+   server:
+      image: node:8.9.0-alpine
+      container_name: server
+      expose:
+         - 1337
+      volumes:
+         - .:/app            # share your code with the containers
+         - dist:/app/dist
+         - ./src/template:/app/template
+      working_dir: /app
+      links:
+         - mongodb
+      command: npm run server
+      environment:
+         USER: user1
+         FORCE_COLOR: 1
+
    web1:
       image: node:8.9.0-alpine
       container_name: express-container1
@@ -26,6 +43,8 @@ services:
       links:
          - mongodb
       command: npm start
+      depends_on:
+         - server
       environment:
          USER: user1
          FORCE_COLOR: 1
@@ -40,8 +59,8 @@ services:
          - dist:/app/dist
          - ./src/template:/app/template
       working_dir: /app
-      links:
-         - mongodb
+      depends_on:
+         - server
       command: npm start
       environment:
          USER: user2
@@ -57,8 +76,8 @@ services:
          - dist:/app/dist
          - ./src/template:/app/template
       working_dir: /app
-      links:
-         - mongodb
+      depends_on:
+         - server
       command: npm start
       environment:
          USER: user3
