--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "nodemon dist/index.js -w dist/",
-		"compile": "tsc -w"
+		"compile": "tsc -w",
+		"server": "nodemon dist/server/tcp_server.js -w dist/server/"
 	},
 	"author": "",
 	"license": "ISC",
