--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"start": "nodemon dist/index.js -w dist/",
 		"compile": "tsc -w",
-		"server": "nodemon dist/server/tcp_server.js -w dist/server/"
+		"server": "nodemon dist/server/tcp-server.js -w dist/server/"
 	},
 	"author": "",
 	"license": "ISC",
@@ -14,11 +14,13 @@
 		"chalk": "^2.3.0",
 		"express": "^4.16.2",
 		"keypair": "^1.0.1",
+		"lodash": "^4.17.4",
 		"mongodb": "^2.2.33",
 		"socket.io": "^2.0.4"
 	},
 	"devDependencies": {
 		"@types/express": "^4.0.39",
+		"@types/lodash": "^4.14.85",
 		"@types/node": "^8.0.53",
 		"@types/socket.io": "^1.4.31",
 		"nodemon": "^1.12.1",
