--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
 	"dependencies": {
 		"chalk": "^2.3.0",
 		"express": "^4.16.2",
-		"keypair": "^1.0.1",
 		"lodash": "^4.17.4",
 		"mongodb": "^2.2.33",
+		"node-forge": "^0.7.1",
+		"node-rsa": "^0.4.2",
 		"socket.io": "^2.0.4"
 	},
 	"devDependencies": {
 		"@types/express": "^4.0.39",
 		"@types/lodash": "^4.14.85",
 		"@types/node": "^8.0.53",
+		"@types/node-forge": "^0.6.10",
+		"@types/node-rsa": "^0.4.0",
 		"@types/socket.io": "^1.4.31",
 		"nodemon": "^1.12.1",
 		"typescript": "^2.6.1"
