--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"mongodb": "^2.2.33",
 		"node-forge": "^0.7.1",
 		"node-rsa": "^0.4.2",
+		"rxjs": "^5.5.6",
 		"socket.io": "^2.0.4"
 	},
 	"devDependencies": {
