--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"devDependencies": {
 		"@types/express": "^4.0.39",
 		"@types/lodash": "^4.14.85",
+		"@types/mongodb": "^3.0.3",
 		"@types/node": "^8.0.53",
 		"@types/node-forge": "^0.6.10",
 		"@types/node-rsa": "^0.4.0",
